# gimbal

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .cspell.json  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .golangci.yaml  .mega-linter.yml  .ruby-lint.yml  .squawk.toml  .stylelintrc.yaml  .tflint.hcl  .yamllint.yml  BUILD.bazel  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  DEVICES.md  LICENSE  MAINTAINERS_oss  MODULE.bazel  Makefile  README.md  ROADMAP.md  WORKSPACE  buf.yaml  constraints.txt  docker.properties  gazelle_python.yaml  go.mod  go.sum  go_deps.bzl  pyproject.toml  requirements.in  requirements_lock.txt  rust-toolchain.toml  (+3 more)
bazel/cc_toolchains/sysroots/: .bazelrc  BUILD.bazel  README.md  create_sysroot.bzl  create_sysroots.bzl  images.bzl  new_sysroots.bzl  register_sysroots.bzl  settings.bzl  sysroot_path.bzl  sysroot_repo.bzl  sysroot_toolchain.bzl  sysroots.bzl  tars.bzl
bazel/cc_toolchains/sysroots/debug/: sysroot.BUILD
bazel/cc_toolchains/sysroots/runtime/: BUILD.bazel  sysroot.BUILD
bazel/cc_toolchains/sysroots/templates/: impl.BUILD  toolchain.BUILD
bazel/cc_toolchains/sysroots/test/: sysroot.BUILD
bazel/python/: BUILD.bazel  c_extensions_for_wheel.bzl  copy_shared_libs.py  py_pkg_provider.bzl  requirements.in  requirements_lock.txt  symlink_tree.bzl  wheel_utils.bzl
bazel/tools/apt_parse/: BUILD.bazel  apt_parse.bzl  main.go
bazel/tools/apt_parse/bazelgen/: BUILD.bazel  bazelgen.go  bazelgen_test.go
bazel/tools/apt_parse/index/: BUILD.bazel  debian_index.go  debian_index_test.go  downloader.go
bazel/tools/apt_parse/mirror/: BUILD.bazel  mirrorer.go
bazel/ui/: BUILD.bazel  build.bzl
src/api/python/: BUILD.bazel  gazelle_python.yaml  pyproject.toml  requirements.in  requirements_lock.txt
src/common/base/: BUILD.bazel  arch.h  array_ref.h  array_ref_test.cc  base.h  bimap.h  bimap_test.cc  byte_utils.h  byte_utils_test.cc  bytes_to_int_benchmark.cc  defer.h  defer_test.cc  enum_utils.h  enum_utils_test.cc  env.cc  env.h  env_test.cc  error.h  error_strings.h  error_test.cc  file.cc  file.h  file_test.cc  hash_utils.h  hash_utils_test.cc  logging.h  logging_test.cc  macros.h  magic_enum_test.cc  mixins.h  status.cc  status.h  status_test.cc  statusor.h  statusor_test.cc  thread.h  time.h  time_test.cc  types.h  types_test.cc  (+2 more)
src/common/event/: BUILD.bazel  api.h  api_impl.cc  api_impl.h  deferred_delete.h  dispatcher.h  event.h  libuv.cc  libuv.h  libuv_dispatcher_test.cc  nats.cc  nats.h  real_time_system.cc  real_time_system.h  task.h  time_system.h  timer.h
src/common/fs/: BUILD.bazel  fs_utils.cc  fs_utils.h  fs_utils_test.cc  fs_wrapper.cc  fs_wrapper.h  fs_wrapper_test.cc  temp_dir.cc  temp_dir.h  temp_dir_test.cc  temp_file.h  temp_file_test.cc
src/common/grpcutils/: BUILD.bazel  README.md  logger.cc  logger.h  service_descriptor_database.cc  service_descriptor_database.h  service_descriptor_database_test.cc  status.h  status_test.cc  utils.h  utils_test.cc
src/common/perf/: BUILD.bazel  elapsed_timer.h  memory_tracker.cc  memory_tracker.h  perf.h  profiler.cc  profiler.h  scoped_profiler.h  scoped_timer.h  scoped_timer_test.cc  tcmalloc.h
src/common/safetensors_wrapper/: BUILD.bazel  Cargo.toml  safetensors.cc  safetensors.h  safetensors_test.cc
src/common/system/: BUILD.bazel  config.cc  config.h  cpu_info_reader.cc  cpu_info_reader.h  cpu_info_reader_test.cc  fdinfo.cc  fdinfo.h  hostname.cc  hostname.h  linux_file_wrapper.cc  linux_file_wrapper.h  linux_file_wrapper_test.cc  mac_address.cc  mac_address.h  mac_address_test.cc  memory_mapped_file.cc  memory_mapped_file.h  memory_mapped_file_test.cc  nvmap.cc  nvmap.h  nvmap_test.cc  parsers.cc  parsers.h  parsers_test.cc  proc_parser.cc  proc_parser.h  proc_parser_test.cc  proc_pid_path.cc  proc_pid_path.h  system.h  version.h
src/common/testing/: BUILD.bazel  line_diff.cc  line_diff.h  line_diff_test.cc  matchers.h  protobuf.h  status.h  temp_dir.h  test_environment.cc  test_environment.h  test_main.cc  testing.h
src/common/typespb/: BUILD.bazel  dag.pb.go  dag.proto  jwt.pb.go  jwt.proto  jwt_pb2.py  jwt_pb2.pyi  status.pb.go  status.proto  status_pb2.py  status_pb2.pyi  uuid.pb.go  uuid.proto  uuid_pb2.py  uuid_pb2.pyi
src/common/uuid/: BUILD.bazel  uuid.h  uuid_benchmark.cc  uuid_utils.h  uuid_utils_test.cc
src/gem/: BUILD.bazel  LICENSE  gem.cc  install.sh  yolo_exec_spec.pbtxt  yolo_model_spec.pbtxt
src/gem/controller/: BUILD.bazel  cached_blob_store.cc  cached_blob_store.h  controller.cc  controller.h  device_info.cc  device_info.h  device_serial.cc  device_serial.h  file_downloader.cc  file_downloader.h  gem_info.h  gem_metrics.cc  gem_metrics.h  grpc_bridge.cc  grpc_bridge.h  heartbeat.cc  heartbeat.h  lifecycle.cc  lifecycle.h  media_stream_handler.cc  media_stream_handler.h  message_handler.h  metrics_handler.cc  metrics_handler.h  model_exec_handler.cc  model_exec_handler.h  system_metrics.cc  system_metrics.h  video_stream_handler.cc  video_stream_handler.h
src/gem/core/: BUILD.bazel  runner.cc  runner.h  runner_test.cc
src/gem/fakegem/: BUILD.bazel  controller.cc  controller.h  download_data_task.cc  download_data_task.h  fakegem.cc  stream_writer.cc  stream_writer.h
src/gem/plugins/: BUILD.bazel  plugins.bzl  registry.cc  registry.h  registry_test.cc
src/gem/scripts/: BUILD.bazel  xvfb_wrapper.sh
src/gem/specpb/: BUILD.bazel  execution.pb.go  execution.proto  model.pb.go  model.proto  tensorrt_model.pb.go  tensorrt_model.proto
src/gem/static/: BUILD.bazel  default_argus_graph.pbtxt  default_opencv_graph.pbtxt  ensure_protos_linked.cc
src/gem/storage/: BUILD.bazel  blob_store.h  fs_blob_store.cc  fs_blob_store.h  fs_blob_store_test.cc  memory_blob.h
src/gem/testing/: calculator_tester.h
src/shared/version/: BUILD.bazel  placeholder_version_linkstamp.cc  version.cc  version.h  version_linkstamp.cc
src/testutils/dockertestutils/: BUILD.bazel  utils.go
tools/licenses/: BUILD.bazel  README.md  checker.py  combine_licenses.py  fetch_licenses.go  manual_licenses.json
(+842 files in other folders)
