# Copyright © 2023- Gimlet Labs, Inc.
# All Rights Reserved.
#
# NOTICE:  All information contained herein is, and remains
# the property of Gimlet Labs, Inc. and its suppliers,
# if any.  The intellectual and technical concepts contained
# herein are proprietary to Gimlet Labs, Inc. and its suppliers and
# may be covered by U.S. and Foreign Patents, patents in process,
# and are protected by trade secret or copyright law. Dissemination
# of this information or reproduction of this material is strictly
# forbidden unless prior written permission is obtained from
# Gimlet Labs, Inc.
#
# SPDX-License-Identifier: Proprietary

load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle_binary")
load("//bazel:gazelle.bzl", "gazelle_runners")

gazelle_binary(
    name = "gazelle_with_js",
    languages = DEFAULT_LANGUAGES + [
        "@com_github_benchsci_rules_nodejs_gazelle//gazelle",
        "@build_stack_rules_proto//language/protobuf",
    ],
)

gazelle_runners(gazelle = "//:gazelle_with_js")

# gazelle:exclude **/node_modules
# gazelle:exclude external
# gazelle:go_naming_convention import

# gazelle:js_extension disabled

# gazelle:exclude **/*.pb.go

# gazelle:go_proto_compilers @io_bazel_rules_go//proto:gogoslick_proto
# gazelle:go_grpc_compilers @io_bazel_rules_go//proto:gogoslick_grpc
# gazelle:go_generate_proto false

exports_files(["LICENSE"])
