# Copyright © 2023- Gimlet Labs, Inc.
# All Rights Reserved.
#
# NOTICE:  All information contained herein is, and remains
# the property of Gimlet Labs, Inc. and its suppliers,
# if any.  The intellectual and technical concepts contained
# herein are proprietary to Gimlet Labs, Inc. and its suppliers and
# may be covered by U.S. and Foreign Patents, patents in process,
# and are protected by trade secret or copyright law. Dissemination
# of this information or reproduction of this material is strictly
# forbidden unless prior written permission is obtained from
# Gimlet Labs, Inc.
#
# SPDX-License-Identifier: Proprietary

module(
    name = "gml",
    version = "0.1.0",
    compatibility_level = 1,
    repo_name = "gimlet",
)

bazel_dep(name = "rules_go", version = "0.43.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.34.0", repo_name = "bazel_gazelle")
bazel_dep(name = "aspect_bazel_lib", version = "2.0.3")
bazel_dep(name = "aspect_rules_jest", version = "0.19.6")
bazel_dep(name = "aspect_rules_js", version = "1.34.1")
bazel_dep(name = "aspect_rules_ts", version = "2.1.0")
bazel_dep(name = "rules_pkg", version = "0.9.1")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
bazel_dep(name = "rules_python", version = "0.27.1")
bazel_dep(name = "rules_oci", version = "1.4.3")
bazel_dep(name = "rules_python_gazelle_plugin", version = "0.27.1")
bazel_dep(name = "glog", version = "0.6.0", repo_name = "com_github_google_glog")
bazel_dep(name = "abseil-cpp", version = "20230802.0", repo_name = "com_google_absl")
bazel_dep(name = "googletest", version = "1.14.0", repo_name = "com_google_googletest")
bazel_dep(name = "google_benchmark", version = "1.8.3", repo_name = "com_google_benchmark")
bazel_dep(name = "re2", version = "2021-09-01")
bazel_dep(name = "rules_apple", version = "3.0.0", repo_name = "build_bazel_rules_apple")

# mediapipe uses rules_nodejs so we pull it in at the top level despite it being pulled in by aspect_rules_js already.
bazel_dep(name = "rules_nodejs", version = "5.8.2")

single_version_override(
    module_name = "aspect_rules_js",
    patch_strip = 1,
    patches = ["//bazel/external:rules_js.patch"],
)

single_version_override(
    module_name = "gazelle",
    patch_strip = 1,
    patches = ["//bazel/external:gazelle.ignore_in_go_mod.patch"],
)

single_version_override(
    module_name = "rules_foreign_cc",
    patch_strip = 1,
    patches = [
        "//bazel/external:rules_foreign_cc.cache_entries_make_vars.patch",
        "//bazel/external:rules_foreign_cc.absolute_bazel_out.patch",
    ],
)

# rules_go/gazelle setup
go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.21.3")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "ag_pault_go_debian",
    "com_github_bazelbuild_buildtools",
    "com_github_blang_semver_v4",
    "com_github_bmatcuk_doublestar",
    "com_github_cenkalti_backoff_v4",
    "com_github_fatih_color",
    "com_github_getsentry_sentry_go",
    "com_github_gofrs_uuid_v5",
    "com_github_gogo_protobuf",
    "com_github_golang_migrate_migrate_v4",
    "com_github_google_go_github_v57",
    "com_github_gorilla_handlers",
    "com_github_gorilla_sessions",
    "com_github_graph_gophers_graphql_go",
    "com_github_grpc_ecosystem_go_grpc_middleware_v2",
    "com_github_jackc_pgerrcode",
    "com_github_jackc_pgtype",
    "com_github_jackc_pgx_v5",
    "com_github_jarcoal_httpmock",
    "com_github_jmoiron_sqlx",
    "com_github_lestrrat_go_jwx_v2",
    "com_github_mikefarah_yq_v4",
    "com_github_nats_io_nats_go",
    "com_github_nats_io_nats_server_v2",
    "com_github_ory_dockertest_v3",
    "com_github_phayes_freeport",
    "com_github_prometheus_client_golang",
    "com_github_prometheus_common",
    "com_github_puerkitobio_goquery",
    "com_github_segmentio_analytics_go_v3",
    "com_github_sercand_kuberesolver_v5",
    "com_github_sirupsen_logrus",
    "com_github_spf13_cobra",
    "com_github_spf13_pflag",
    "com_github_spf13_viper",
    "com_github_stretchr_testify",
    "com_github_ulikunitz_xz",
    "in_gopkg_yaml_v3",
    "io_nhooyr_websocket",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_net",
    "org_golang_x_oauth2",
    "org_golang_x_sync",
    "org_uber_go_mock",
)

# rules_ts setup
rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")

# rules_js setup
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    bins = {
        "next": ["next=./dist/bin/next"],
        "storybook": ["storybook=./index.js"],
    },
    npmrc = "//src/ui:.npmrc",
    pnpm_lock = "//src/ui:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

# rules_python setup
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    ignore_root_user_error = True,
    is_default = True,
    python_version = "3.9",
)
use_repo(python, python = "python_3_9")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.9",
    requirements_lock = "//bazel/python:requirements_lock.txt",
)
use_repo(pip, "pip")

# rules_oci setup
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_nodejs",
    digest = "sha256:d3b3e2272621ed6ac35bd7b95aeb3c703301ba5b0a20b3f14a9504ca96a8f086",
    image = "gcr.io/distroless/nodejs20-debian12",
)
oci.pull(
    name = "postgres_15_alpine",
    digest = "sha256:35ce2187f2f7fb75e8e79493e13743596c21eb3789ff41ece145ae04d06e93a5",  # 15-alpine multiarch digest
    image = "index.docker.io/library/postgres",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
oci.pull(
    name = "victoria_metrics_1_93_6",
    digest = "sha256:d82583468b3f90dda5681b9a3496185ba1c2db6938e9dba36f3a05ebe6963f9c",  # v1.93.6 multiarch digest
    image = "index.docker.io/victoriametrics/victoria-metrics",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(oci, "distroless_nodejs", "postgres_15_alpine", "victoria_metrics_1_93_6")
