[project]
name = "gml"
version = "0.0.1"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = "bazel/python/requirements.in"}

[tool.setuptools.packages.find]
include = ["src*", "third_party.python*"]

[tool.isort]
profile = "black"

[tool.pyright]
include = ["src"]
reportUnusedImport = true

[tool.ruff.lint]
# Add flake8-bugbear rules to the default ruff setup
select = ["E4", "E7", "E9", "F", "B"]
# Avoid trying to fix bugbear violations.
unfixable = ["B"]

