# Copyright © 2023- Gimlet Labs, Inc.
# All Rights Reserved.
#
# NOTICE:  All information contained herein is, and remains
# the property of Gimlet Labs, Inc. and its suppliers,
# if any.  The intellectual and technical concepts contained
# herein are proprietary to Gimlet Labs, Inc. and its suppliers and
# may be covered by U.S. and Foreign Patents, patents in process,
# and are protected by trade secret or copyright law. Dissemination
# of this information or reproduction of this material is strictly
# forbidden unless prior written permission is obtained from
# Gimlet Labs, Inc.
#
# SPDX-License-Identifier: Proprietary

load("@npm//src/ui:storybook/package_json.bzl", storybook_bin = "bin")
load("//bazel/ui:build.bzl", "STORYBOOK_CLEANUP")

storybook_bin.storybook_binary(
    name = "storybook_binary",
    postrun = STORYBOOK_CLEANUP,
    visibility = ["//visibility:public"],
)
