# Copyright © 2023- Gimlet Labs, Inc.
# All Rights Reserved.
#
# NOTICE:  All information contained herein is, and remains
# the property of Gimlet Labs, Inc. and its suppliers,
# if any.  The intellectual and technical concepts contained
# herein are proprietary to Gimlet Labs, Inc. and its suppliers and
# may be covered by U.S. and Foreign Patents, patents in process,
# and are protected by trade secret or copyright law. Dissemination
# of this information or reproduction of this material is strictly
# forbidden unless prior written permission is obtained from
# Gimlet Labs, Inc.
#
# SPDX-License-Identifier: Proprietary

load("@rules_oci//oci:defs.bzl", "oci_push")
load("//bazel:gml_build_system.bzl", "gml_cc_binary", "gml_cc_library", "intelgpu_sysroot", "jetson_sysroot")
load("//bazel:images.bzl", "gml_binary_image")

package(default_visibility = [
    "//src:__subpackages__",
])

gml_cc_library(
    name = "cc_library",
    srcs = [
        "gem.cc",
    ],
    deps = [
        "//src/gem/controller:cc_library",
        "//src/shared/version:cc_library",
        "@com_github_rlyeh_sole//:sole",
    ],
)

gml_cc_binary(
    name = "gem",
    linkopts = [
        # Ensure that our shared libs are picked up before LD_LIBRARY_PATH libs.
        "-Wl,--disable-new-dtags",
    ],
    deps = [
        ":cc_library",
        "//src/shared/version:cc_library",
        "//src/shared/version:version_linkstamp",
    ],
)

# TODO(james): once the openvino build works on aarch64, we can make this a multiarch image.
gml_binary_image(
    name = "gem_image",
    binary = ":gem",
    include_runfiles = True,
)

oci_push(
    name = "push_gem_image",
    image = ":gem_image",
    remote_tags = ["dev-latest"],
    repository = "us-docker.pkg.dev/gimlet-dev-infra-0/gimlet-dev-infra-public-docker-artifacts/gem_image",
)

# TODO(james): remove once remote_tags changes have settled.
oci_push(
    name = "push_gem_intelgpu_image",
    image = ":gem_image",
    remote_tags = ["intelgpu-dev-latest"],
    repository = "us-docker.pkg.dev/gimlet-dev-infra-0/gimlet-dev-infra-public-docker-artifacts/gem_image",
    target_compatible_with = intelgpu_sysroot(),
)

# TODO(james): remove once remote_tags changes have settled.
oci_push(
    name = "push_gem_jetson_image",
    image = ":gem_image",
    remote_tags = ["jetson-dev-latest"],
    repository = "us-docker.pkg.dev/gimlet-dev-infra-0/gimlet-dev-infra-public-docker-artifacts/gem_image",
    target_compatible_with = jetson_sysroot(),
)
