# Copyright © 2023- Gimlet Labs, Inc.
# All Rights Reserved.
#
# NOTICE:  All information contained herein is, and remains
# the property of Gimlet Labs, Inc. and its suppliers,
# if any.  The intellectual and technical concepts contained
# herein are proprietary to Gimlet Labs, Inc. and its suppliers and
# may be covered by U.S. and Foreign Patents, patents in process,
# and are protected by trade secret or copyright law. Dissemination
# of this information or reproduction of this material is strictly
# forbidden unless prior written permission is obtained from
# Gimlet Labs, Inc.
#
# SPDX-License-Identifier: Proprietary
load("//bazel:gml_build_system.bzl", "gml_cc_binary", "gml_cc_library")
load("//bazel:images.bzl", "gml_binary_image", "gml_oci_push")

package(default_visibility = [
    "//src:__subpackages__",
])

exports_files([
    "install.sh",
])

gml_cc_library(
    name = "cc_library",
    srcs = [
        "gem.cc",
    ],
    deps = [
        "//src/gem/controller:cc_library",
        "//src/shared/version:cc_library",
        "@com_github_rlyeh_sole//:sole",
        "@com_google_absl//absl/log:initialize",
    ],
)

gml_cc_binary(
    name = "gem",
    linkopts = [
        # Ensure that our shared libs are picked up before LD_LIBRARY_PATH libs.
        "-Wl,--disable-new-dtags",
    ],
    deps = [
        ":cc_library",
        "//src/gem/static:cc_library",
        "//src/shared/version:cc_library",
        "//src/shared/version:version_linkstamp",
    ],
)

# TODO(james): once the openvino build works on aarch64, we can make this a multiarch image.
gml_binary_image(
    name = "gem_image",
    binary = ":gem",
    include_runfiles = True,
)

gml_oci_push(
    name = "push_gem_image",
    image = ":gem_image",
    remote_tags = ["dev-latest"],
    repository = "us-docker.pkg.dev/gimlet-dev-0/gimlet-dev-docker-artifacts/gem_image",
)
